--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -38,7 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ekaterina149.github.io/react-mesto-auth/",
+  "homepage": "http://localhost:3001/",
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
